@@ -67,6 +67,7 @@ public:
 	}
 	virtual Rcpp::CharacterVector method_names(){ return Rcpp::CharacterVector(0) ; }
 	virtual Rcpp::CharacterVector property_names(){ return Rcpp::CharacterVector(0) ; }
+	virtual bool property_is_readonly(const std::string& ) throw(std::range_error) { return false ; }
 	
 	virtual Rcpp::CharacterVector complete(){ return Rcpp::CharacterVector(0) ; }
 	virtual ~class_Base(){}
@@ -154,6 +155,7 @@ class CppProperty {
 		CppProperty(){} ;
 		virtual SEXP get(Class* ) throw(std::range_error){ throw std::range_error("cannot retrieve property"); }
 		virtual void set(Class*, SEXP) throw(std::range_error){ throw std::range_error("cannot set property"); }
+		virtual bool is_readonly(){ return false; }
 } ;
 
 #include <Rcpp/module/Module_Property.h>
@@ -220,6 +222,11 @@ public:
 	}
 	bool has_property( const std::string& m){
 		return properties.find(m) != properties.end() ;
+	}
+	bool property_is_readonly( const std::string& p) throw(std::range_error) {
+		typename PROPERTY_MAP::iterator it = properties.find( p ) ;
+		if( it == properties.end() ) throw std::range_error( "no such property" ) ;
+		return it->second->is_readonly() ;
 	}
 	
 	Rcpp::CharacterVector method_names(){
